Major refactor for the GUI
 * This is a mini rewrite of the ui,
 * Now supports adding multiple lists at once and exporting them at once,
 * The format used for storing lists is very simple for now
 * Zpl based printing will be also added in a future commit thanks to this
 * TODO: Move file dialogs to a Service
 * TODO: Do a general cleanup after this commit

--- a/LabelGenGUI/App.axaml
+++ b/LabelGenGUI/App.axaml
@@ -1,9 +1,14 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Class="LabelGenGUI.Avalonia.App"
+             x:Class="LabelGenGUI.App"
+             xmlns:services="using:LabelGenGUI.Services"
              RequestedThemeVariant="Default">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
+  <Application.DataTemplates>
+    <services:ViewLocator />
+  </Application.DataTemplates>
+  
     <Application.Styles>
         <FluentTheme />
     </Application.Styles>
