--- a/LabelGenGUI/Views/ErrorWindow.axaml
+++ b/LabelGenGUI/Views/ErrorWindow.axaml
@@ -2,9 +2,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:vm="clr-namespace:LabelGenGUI.Avalonia.ViewModels"
+        xmlns:vm="clr-namespace:LabelGenGUI.ViewModels"
         mc:Ignorable="d" Height="100" SizeToContent="Width"
-        x:Class="LabelGenGUI.Avalonia.Views.ErrorWindow"
+        x:Class="LabelGenGUI.Views.ErrorWindow"
         Title="Hata" 
         Icon="/Assets/avalonia-logo.ico"
         WindowStartupLocation="CenterOwner"
