--- a/LabelGenGUI/Views/PrintView.axaml
+++ b/LabelGenGUI/Views/PrintView.axaml
@@ -2,6 +2,24 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="350"
-             x:Class="LabelGenGUI.Views.PrintView">
+             xmlns:vm="clr-namespace:LabelGenGUI.ViewModels"
+             mc:Ignorable="d" Width="300" Height="600"
+             x:Class="LabelGenGUI.Views.PrintView"
+             x:DataType="vm:PrintViewModel" AttachedToVisualTree="GetTotalCounts">
+  
+  <StackPanel Orientation="Vertical" VerticalAlignment="Center">
+    <TextBlock Text="{Binding TotalBox, StringFormat='Toplam Kutu Barkod: {0}'}" FontSize="16" Margin="16,0,0,10"/>
+    <TextBlock Text="{Binding TotalParcel, StringFormat='Toplam Koli Barkod: {0}'}" FontSize="16" Margin="16,0,0,10" />
+    <StackPanel Orientation="Horizontal" Margin="16,5">
+      <Button Content="Kutu Yazdır" Command="{Binding PrintBox}" Margin="0,0,5,0"/>
+      <Button Content="Koli Yazdır" Command="{Binding PrintParcel}"/>
+    </StackPanel>
+    <Border MinHeight="65">
+      <StackPanel Orientation="Vertical" Margin="16,25" IsVisible="{Binding ProgressVisible}">
+        <ProgressBar IsIndeterminate="True" Margin="0,0,0,5" IsVisible="{Binding ProgressBarVisible}"/>
+        <TextBlock FontSize="16" Text="{Binding ProgressMessage}" />
+      </StackPanel>
+    </Border>
+    <ContentControl Name="PrinterListContent"/>
+  </StackPanel>
 </UserControl>
