--- a/LabelGenGUI/Views/PrintView.axaml
+++ b/LabelGenGUI/Views/PrintView.axaml
@@ -3,12 +3,12 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="clr-namespace:LabelGenGUI.ViewModels"
-             mc:Ignorable="d" Width="300" Height="600"
+             mc:Ignorable="d" Width="300"
              x:Class="LabelGenGUI.Views.PrintView"
              x:DataType="vm:PrintViewModel" AttachedToVisualTree="GetTotalCounts">
   
   <StackPanel Orientation="Vertical" VerticalAlignment="Center">
-    <TextBlock Text="{Binding TotalBox, StringFormat='Toplam Kutu Barkod: {0}'}" FontSize="16" Margin="16,0,0,10"/>
+    <TextBlock Text="{Binding TotalBox, StringFormat='Toplam Kutu Barkod: {0}'}" FontSize="16" Margin="16,8,0,10"/>
     <TextBlock Text="{Binding TotalParcel, StringFormat='Toplam Koli Barkod: {0}'}" FontSize="16" Margin="16,0,0,10" />
     <StackPanel Orientation="Horizontal" Margin="16,5">
       <Button Content="Kutu Yazdır" Command="{Binding PrintBox}" Margin="0,0,5,0"/>
