--- a/LabelGenGUI/Views/PrinterListView.axaml
+++ b/LabelGenGUI/Views/PrinterListView.axaml
@@ -14,18 +14,21 @@
       <Separator Margin="2,0,16,0"/>
     </DockPanel>
     <StackPanel Orientation="Vertical">
-      <ListBox Name="PrinterList" SelectionMode="Toggle" ItemsSource="{Binding Printers}" SelectedItem="{Binding CurrentPrinter}" Margin="10" Width="280" Height="150">
+      <ListBox Name="PrinterList" ScrollViewer.HorizontalScrollBarVisibility="Auto" SelectionMode="Toggle" ItemsSource="{Binding Printers}" SelectedItem="{Binding CurrentPrinter}" Margin="10" Width="280" Height="150">
         <ListBox.Styles>
           <Style Selector="ListBoxItem">
             <Setter Property="BorderBrush" Value="Black" />
             <Setter Property="BorderThickness" Value="0,0,0,1" />
           </Style>
+          <Style Selector="TextBlock">
+            <Setter Property="FontSize" Value="12" />
+          </Style>
         </ListBox.Styles>
         <ListBox.ItemTemplate>
           <DataTemplate>
               <StackPanel Orientation="Horizontal">
-                <TextBlock Text="{Binding Name, StringFormat='İsim: {0},'}" Margin="0,0,5,0"/>
-                <TextBlock Text="{Binding Uri, StringFormat='Adres: {0}'}" Margin="0,0,5,0"/>
+                <TextBlock Text="{Binding Name}"/>
+                <TextBlock Text="{Binding Uri, StringFormat=', Adres: {0}'}"/>
               </StackPanel>
           </DataTemplate>
         </ListBox.ItemTemplate>
