Print: Only hide progress bar  * Set progress text to empty, only change progressbar visibility

--- a/LabelGenGUI/Views/PrintView.axaml
+++ b/LabelGenGUI/Views/PrintView.axaml
@@ -16,7 +16,7 @@
       <Button Content="Koli Yazdır" Command="{Binding PrintParcel}"/>
     </StackPanel>
     <Border MinHeight="65">
-      <StackPanel Orientation="Vertical" Margin="16,25" IsVisible="{Binding ProgressVisible}">
+      <StackPanel Orientation="Vertical" Margin="16,25">
         <ProgressBar IsIndeterminate="True" Margin="0,0,0,5" IsVisible="{Binding ProgressBarVisible}"/>
         <TextBlock FontSize="16" Text="{Binding ProgressMessage}" />
       </StackPanel>
