--- a/LabelGenGUI/Views/PrinterListView.axaml
+++ b/LabelGenGUI/Views/PrinterListView.axaml
@@ -36,7 +36,7 @@
       <TextBox Text="{Binding NewPrinterName}" FontSize="16" Margin="16,0" Watermark="Yazıcı ismi girin" />
       <TextBox Text="{Binding NewPrinterUri}" FontSize="16" Margin="16,8" Watermark="Yazıcı adresi girin" />
       <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-        <Button Content="Ekle" Command="{Binding AddPrinter}" Margin="0,0,8,8"/>
+        <Button Content="Ekle" Command="{Binding AddPrinterCommand}" Margin="0,0,8,8"/>
         <Button Content="Sil" Command="{Binding RemovePrinter}" CommandParameter="{Binding ElementName=PrinterList, Path=SelectedItem}" Margin="0,0,0,8"/>
       </StackPanel>
     </StackPanel>
