GUI: Experimental Android support
 * Disabled file operations for now, also the app is not really functional on Android at this moment.
 * The desktop version remains unaffected, so no harm in committing this as is.
 * I intend to make a Android specific UI in the future

--- a/LabelGenGUI/Views/MainView.axaml
+++ b/LabelGenGUI/Views/MainView.axaml
@@ -14,7 +14,7 @@
     <vm:MainViewModel/>
   </Design.DataContext>
   <Grid RowDefinitions="22,*">
-    <Menu Grid.Row="0" Height="22" Margin="0,2,0,2">
+    <Menu Grid.Row="0" Height="22" Margin="{OnPlatform '0,2,0,2', Android='8,50,8,8'}">
       <MenuItem Header="_Dosya">
         <MenuItem Header="Yeni Proje" Command="{Binding NewProjectCommand}"/>
         <MenuItem Header="Proje Aç" Command="{Binding OpenProjectCommand}"/>
