GUI: Various scaling improvements, workaround for mobile keyboard
* The app is mostly resizable now, so it is much more usable in mobile
* Add a quick workaround for soft keyboard (i will redo it later)
* Bump dependencies

--- a/LabelGenGUI/Views/MainView.axaml
+++ b/LabelGenGUI/Views/MainView.axaml
@@ -7,14 +7,10 @@
              xmlns:views="clr-namespace:LabelGenGUI.Views"
              mc:Ignorable="d"
              x:Class="LabelGenGUI.Views.MainView"
-             x:DataType="vm:MainViewModel" MinHeight="350" MinWidth="300">
-  <Design.DataContext>
-    <!-- This only sets the DataContext for the previewer in an IDE,
-         to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
-    <vm:MainViewModel/>
-  </Design.DataContext>
-  <Grid RowDefinitions="22,*">
-    <Menu Grid.Row="0" Height="22" Margin="{OnPlatform '0,2,0,2', Android='8,50,8,8'}">
+             x:DataType="vm:MainViewModel" MinHeight="300" MinWidth="280">
+  <Grid RowDefinitions="24,*">
+    <!-- Statusbar workaround for Android (hopefully temporary) -->
+    <Menu VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Row="0" Height="22" Margin="{OnPlatform '0,2,0,2', Android='8,50,8,8'}">
       <MenuItem Header="_Dosya">
         <MenuItem Header="Yeni Proje" Command="{Binding NewProjectCommand}"/>
         <MenuItem Header="Proje Aç" Command="{Binding OpenProjectCommand}"/>
@@ -32,6 +28,6 @@
     <TextBlock Grid.Row="1" Text="Dosya menüsünden yeni bir proje oluşturun veya proje seçin." TextWrapping="Wrap" Width="250"
                TextAlignment="Center" VerticalAlignment="Center"
                IsVisible="{Binding #MainContentControl.Content, Converter={x:Static ObjectConverters.IsNull}}"/>
-    <ContentControl Grid.Row="1" Name="MainContentControl" VerticalAlignment="Center"/>
+    <ContentControl Grid.Row="1" Name="MainContentControl" />
   </Grid>
 </UserControl>
