--- a/LabelGenGUI/Views/MainWindow.axaml
+++ b/LabelGenGUI/Views/MainWindow.axaml
@@ -4,9 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:LabelGenGUI.Views"
-        mc:Ignorable="d" SizeToContent="WidthAndHeight"
+        mc:Ignorable="d"
         x:Class="LabelGenGUI.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
-        Title="LabelGenGUI" CanResize="False" WindowStartupLocation="CenterScreen">
-        <views:MainView />
+        Title="LabelGenGUI" CanResize="True" WindowStartupLocation="CenterScreen"
+        MinHeight="300" MinWidth="300" Width="300" Height="400">
+    <views:MainView />
 </Window>
