--- a/LabelGenGUI/Views/PrinterListView.axaml
+++ b/LabelGenGUI/Views/PrinterListView.axaml
@@ -13,7 +13,7 @@
       <TextBlock Text="Yazıcı Listesi" FontWeight="Light" FontSize="12"/>
       <Separator Margin="2,0,16,0"/>
     </DockPanel>
-      <ListBox Name="PrinterList" ScrollViewer.HorizontalScrollBarVisibility="Auto" SelectionMode="Toggle" ItemsSource="{Binding Printers}" SelectedItem="{Binding CurrentPrinter}" Margin="10" Width="280" Height="150">
+      <ListBox Name="PrinterList" ScrollViewer.HorizontalScrollBarVisibility="Auto" SelectionMode="Toggle" ItemsSource="{Binding Printers}" SelectedItem="{Binding CurrentPrinter}" Margin="10" MinWidth="200" MinHeight="100">
         <ListBox.Styles>
           <Style Selector="ListBoxItem">
             <Setter Property="BorderBrush" Value="Black" />
